translate to kor

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         required
         maxlength="15"
         type="text"
-        placeholder="What is your name?"
+        placeholder="반가워, 이름을 알려줄래?"
       />
       <input type="submit" value="Log In" />
     </form>
     <h1 class="hidden" id="greeting"></h1>
     <form id="todo-form">
-      <input type="text" placeholder="What is your goal for today?" required />
+      <input type="text" placeholder="오늘의 목표는 뭐야?" required />
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
